--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-server.address= localhost
 server.port=666
 server.servlet.context-path=/fcserver
 
-spring.datasource.url=jdbc:mysql://192.168.102.200:33306/website?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://192.168.102.200:33306/fcserver?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fcserver?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123123
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath*:com/project/wjl/fcserver/mapxml/*.xml
+
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
