--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 server.port=666
 server.servlet.context-path=/fcserver
 
-#spring.datasource.url=jdbc:mysql://192.168.102.200:33306/fcserver?serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/fcserver?serverTimezone=UTC
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/fcserver?serverTimezone=UTC
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.102.200:33306/fcserver?serverTimezone=UTC
+spring.datasource.password=123123
 spring.datasource.username=root
-spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath*:com/project/wjl/fcserver/mapxml/*.xml
 
 spring.redis.database=0
-spring.redis.host=127.0.0.1
+spring.redis.host=192.168.102.220
 spring.redis.port=6379
