--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		
+		<dependency>
+		     <groupId>commons-beanutils</groupId>
+		     <artifactId>commons-beanutils</artifactId>
+		     <version>1.9.3</version>
+		 </dependency>
+		
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
