--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath*:com/project/wjl/fcserver/mapxml/*.xml
 
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql;
+pagehelper.page-size-zero=true
+
 spring.redis.database=0
 spring.redis.host=192.168.102.220
 spring.redis.port=6379
