--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=666
 server.servlet.context-path=/fcserver
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/fcserver?serverTimezone=UTC
-spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://192.168.102.200:33306/fcserver?serverTimezone=UTC
-#spring.datasource.password=123123
+#spring.datasource.url=jdbc:mysql://localhost:3306/fcserver?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8&rewriteBatchedStatements=true
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.102.200:33306/fcserver?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8&rewriteBatchedStatements=true
+spring.datasource.password=123123
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -18,6 +18,6 @@ pagehelper.params=count=countSql;
 pagehelper.page-size-zero=true
 
 spring.redis.database=0
-spring.redis.host=127.0.0.1
-#spring.redis.host=192.168.102.220
+#spring.redis.host=127.0.0.1
+spring.redis.host=192.168.102.220
 spring.redis.port=6379
