--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.redis.database=0
 #spring.redis.host=127.0.0.1
 spring.redis.host=192.168.102.220
 spring.redis.port=6379
+
+app.defaultPassword=123123
